# rust-robot

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
avr-specs/: avr-atmega2560.json
src/: main.rs  robot.rs  serial_print.rs  telemetry.rs
src/l298n/: mod.rs  motor_controller.rs  motor_enable_pins.rs
src/model/: heading_calculator.rs  mod.rs  motor_calibration.rs  pid_controller.rs
src/system/: data_logging.rs  data_table.rs  millis.rs  mod.rs  serial_print.rs
