[package]
name = "rust-robot"
version = "0.1.0"
authors = ["Michael Kamprath <michael@kamprath.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rust-robot"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = { version = "0.2", git =  "https://github.com/michaelkamprath/ufmt.git", branch = "floating_point", features = ["f32"] }
nb = "0.1.2"
embedded-hal = "0.2.7"
avr-device = "0.5.2"
avr-device-macros = "0.5.2"

[dependencies.arduino-hal]
git = "https://github.com/michaelkamprath/avr-hal.git"
branch = "ufmt_floating_point"
features = ["arduino-mega2560"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
# lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
# lto = true
opt-level = "s"

[patch.crates-io]
# ufmt = { path = "../ufmt" }

