[package]
name = "rust-robot"
version = "0.1.0"
authors = ["Michael Kamprath <michael@kamprath.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rust-robot"
test = false
bench = false

[dependencies]
ufmt = { version = "0.2", git =  "https://github.com/michaelkamprath/ufmt.git", branch = "floating_point", features = ["f32"] }
nb = "1.1.0"
embedded-hal = "0.2.7"
avr-device = "0.5.2"
avr-device-macros = "0.5.2"
avr-progmem = { version = "0.3", features = ["ufmt"], git = "https://github.com/michaelkamprath/avr-progmem-rs.git", branch = "v0.3.4" }
panic-halt = "0.2.0"
arduino-hal = {git = "https://github.com/michaelkamprath/avr-hal.git", branch = "ufmt_floating_point", features = ["arduino-mega2560"] }
micromath = "2"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
# lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
# lto = true
opt-level = "s"

[patch.crates-io]
ufmt = { path = "../ufmt" }
# arduino-hal = { path = "../avr-hal/arduino-hal" }
# avr-hal-generic = { path = "../avr-hal/avr-hal-generic" }
# avr-progmem = { path = "../avr-progmem-rs" }