[package]
name = "rust-robot"
version = "0.1.0"
authors = ["Michael Kamprath <michael@kamprath.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rust-robot"
test = false
bench = false

[dependencies]
ufmt = { version = "0.2", git =  "https://github.com/michaelkamprath/ufmt.git", branch = "floating_point", features = ["f32"] }
nb = "1.1.0"
embedded-hal = "0.2.7"
avr-device = "0.5.2"
avr-device-macros = "0.5.2"
panic-halt = "0.2.0"
arduino-hal = {git = "https://github.com/michaelkamprath/avr-hal.git", branch = "ufmt_floating_point", features = ["arduino-mega2560"] }
micromath = "2"
mpu6050 = { git = "https://github.com/michaelkamprath/mpu6050.git", branch = "micromath" }


# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
debug = false
# lto = "thin"
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
# lto = "thin"
opt-level = "s"

[patch.crates-io]
ufmt = { path = "../ufmt" }
# mpu6050 = { path = "../mpu6050" }
# udatatable = { path = "../udatatable" }
# arduino-hal = { path = "../avr-hal/arduino-hal" }
# avr-hal-generic = { path = "../avr-hal/avr-hal-generic" }
# avr-progmem = { path = "../avr-progmem-rs" }

[patch."https://github.com/japaric/ufmt.git"]
ufmt = { path = "../ufmt" }

[patch."https://github.com/michaelkamprath/ufmt.git"]
ufmt = { path = "../ufmt" }

# [patch."https://github.com/michaelkamprath/udatatable.git"]
# udatatable = { path = "../udatatable" }
